feat: improve styles and embed fonts

--- a/Nanzan.iatemplate/Contents/Resources/document.html
+++ b/Nanzan.iatemplate/Contents/Resources/document.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" media="all" href="style.css" />
+    <link rel="stylesheet" media="all" href="styles/style.css" />
   </head>
   <body class="markdown-body" data-document>
     &nbsp;
