--- a/Nanzan.iatemplate/Contents/Resources/footer.html
+++ b/Nanzan.iatemplate/Contents/Resources/footer.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" media="all" href="style.css">
-</head>
-<body class="footer">
-<p><span data-page-number>&nbsp;</span>&nbsp;/&nbsp;<span data-page-count>&nbsp;</span></p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" media="all" href="styles/style.css" />
+  </head>
+  <body class="footer">
+    <p>
+      <span data-page-number>&nbsp;</span>&nbsp;/&nbsp;<span data-page-count
+        >&nbsp;</span
+      >
+    </p>
+  </body>
 </html>
