--- a/Nanzan.iatemplate/Contents/Resources/title.html
+++ b/Nanzan.iatemplate/Contents/Resources/title.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" media="all" href="style.css" />
+    <link rel="stylesheet" media="all" href="styles/style.css" />
   </head>
   <body class="title">
     <h1 data-title>&nbsp;</h1>
